--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <style>
-        body {background-image:url("Back.jpg");
+        body {background-image:url("Back.jpeg");
         
         }
         h1   {color: rgb(255, 72, 0);
